--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,4 +35,5 @@ copyright: All documentation is licensed under the <a href="/license">GNU GPLv2<
 repo_url: https://github.com/inspircd/inspircd-docs
 site_description: InspIRCd is a modular C++ Internet Relay Chat (IRC) server for UNIX-like and Windows systems.
 site_name: InspIRCd Documentation
+site_url: https://docs.inspircd.org/
 theme: cinder
