--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
         - Modes: 3/modes.md
         - Modules: 3/modules/index.md
         - SNOMasks: 3/snomasks.md
+        - Change Log: 3/change-log.md
     - Downloads: https://github.com/inspircd/inspircd/releases/latest
     - Issue Tracker: https://github.com/inspircd/inspircd/issues
     - Developer API: https://www.inspircd.org/api/
