Limit the CI workflows.
- Only run deploy-site in the main repo.
- Also run the pr-checks after a push to any fork.

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -3,6 +3,7 @@ on:
   - push
 jobs:
   build:
+    if: github.repository == 'inspircd/inspircd-docs'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
