--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Click==7.0
 future==0.18.2
+htmlmin==0.1.12
 Jinja2==2.11.1
+jsmin==2.2.2
 livereload==2.6.1
 lunr==0.5.6
 Markdown==3.1.1
@@ -9,6 +11,7 @@ MarkupSafe==1.1.1
 mkdocs==1.0.4
 mkdocs-cinder==1.0.2
 mkdocs-exclude==1.0.2
+mkdocs-minify-plugin==0.3.0
 mkdocs-redirects==1.0.0
 nltk==3.4.5
 PyYAML==5.3
