Update MkDocs and its dependencies.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,3 @@
-extra_css:
-  - css/fix-cinder-bugs.css
 nav:
     - InspIRCd 2:
         - Installation: 2/installation/index.md
@@ -42,6 +40,7 @@ plugins:
 theme:
   name: cinder
   highlightjs: true
+  disable_nav_previous_next: true
 copyright: All documentation is licensed under the <a href="/license">GNU GPLv2</a>.
 repo_url: https://github.com/inspircd/inspircd-docs
 site_description: InspIRCd is a modular C++ Internet Relay Chat (IRC) server for UNIX-like and Windows systems.
