--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-Click==7.0
+click==7.1.2
 future==0.18.2
 htmlmin==0.1.12
-Jinja2==2.11.1
+Jinja2==2.11.2
+joblib==1.0.0
 jsmin==2.2.2
-livereload==2.6.1
-lunr==0.5.6
-Markdown==3.1.1
-markdown-include==0.5.1
+livereload==2.6.3
+lunr==0.5.8
+Markdown==3.3.3
+markdown-include==0.6.0
 MarkupSafe==1.1.1
-mkdocs==1.0.4
-mkdocs-cinder==1.0.2
+mkdocs==1.1.2
+mkdocs-cinder==1.2.0
 mkdocs-exclude==1.0.2
 mkdocs-minify-plugin==0.3.0
-mkdocs-redirects==1.0.0
-nltk==3.4.5
-PyYAML==5.3
-six==1.14.0
-tornado==6.0.4
+mkdocs-redirects==1.0.1
+nltk==3.5
+PyYAML==5.3.1
+regex==2020.11.13
+six==1.15.0
+tornado==6.1
+tqdm==4.54.1
