Only update the site when a push to master happens.

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -3,7 +3,7 @@ on:
   - push
 jobs:
   build:
-    if: github.repository == 'inspircd/inspircd-docs'
+    if: github.repository == 'inspircd/inspircd-docs' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
