--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -8,6 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+            sudo apt-get install python3-pip python3-setuptools python3-wheel --assume-yes --install-recommends
+            sudo pip3 install -r requirements.txt
+
+      - name: Check YAML compiles to Markdown
+        run: ./tools/yml2md.py
       - name: Check for missing pages
         run: ./tools/find-missing
       - name: Check for orphaned pages
