--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = mkdocs_inspircd_modules
+name = mkdocs_inspircd
 version = 0.0.1
 
 [options]
-packages = mkdocs_inspircd_modules
+packages = mkdocs_inspircd
 include_package_data = True
 install_requires =
     jinja2
@@ -12,7 +12,7 @@ install_requires =
 
 [options.entry_points]
 mkdocs.plugins=
-    inspircd_modules = mkdocs_inspircd_modules:InspircdModulesPlugin
+    inspircd = mkdocs_inspircd:InspircdPlugin
 
 [options.package_data]
 * = templates/*.j2
