Convert all modules starting with a 'c' (except commonchans)

--- a/docs/3/modules/cban.yml
+++ b/docs/3/modules/cban.yml
@@ -42,11 +42,10 @@ example_commands: |-
   /CBAN #example
   ```
 
-  ### Statistics
+stats:
+  - char: C
+    description: Lists all channel bans.
 
-  Character | Description
-  --------- | -----------
-  C         | Lists all channel bans.
 special_notes: |-
   CBANs are expired lazily when a lookup happens for performance reasons.
   This means that expiry messages may display later than expected.
