--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,28 +51,28 @@ plugins:
           2/modules/cap.md: 3/modules/cap.yml
           2/modules/cban.md: 3/modules/cban.yml
           2/modules/censor.md: 3/modules/censor.yml
-          2/modules/cgiirc.md: 3/modules/cgiirc.md
-          2/modules/chancreate.md: 3/modules/chancreate.md
-          2/modules/chanfilter.md: 3/modules/chanfilter.md
-          2/modules/chanhistory.md: 3/modules/chanhistory.md
-          2/modules/chanlog.md: 3/modules/chanlog.md
-          2/modules/channames.md: 3/modules/channames.md
-          2/modules/channelban.md: 3/modules/channelban.md
-          2/modules/check.md: 3/modules/check.md
-          2/modules/chghost.md: 3/modules/chghost.md
-          2/modules/chgident.md: 3/modules/chgident.md
-          2/modules/chgname.md: 3/modules/chgname.md
-          2/modules/cloaking.md: 3/modules/cloaking.md
-          2/modules/clones.md: 3/modules/clones.md
+          2/modules/cgiirc.md: 3/modules/cgiirc.yml
+          2/modules/chancreate.md: 3/modules/chancreate.yml
+          2/modules/chanfilter.md: 3/modules/chanfilter.yml
+          2/modules/chanhistory.md: 3/modules/chanhistory.yml
+          2/modules/chanlog.md: 3/modules/chanlog.yml
+          2/modules/channames.md: 3/modules/channames.yml
+          2/modules/channelban.md: 3/modules/channelban.yml
+          2/modules/check.md: 3/modules/check.yml
+          2/modules/chghost.md: 3/modules/chghost.yml
+          2/modules/chgident.md: 3/modules/chgident.yml
+          2/modules/chgname.md: 3/modules/chgname.yml
+          2/modules/cloaking.md: 3/modules/cloaking.yml
+          2/modules/clones.md: 3/modules/clones.yml
           2/modules/commonchans.md: 3/modules/commonchans.md
-          2/modules/conn_join.md: 3/modules/conn_join.md
-          2/modules/conn_umodes.md: 3/modules/conn_umodes.md
-          2/modules/conn_waitpong.md: 3/modules/conn_waitpong.md
-          2/modules/connectban.md: 3/modules/connectban.md
-          2/modules/connflood.md: 3/modules/connflood.md
-          2/modules/customprefix.md: 3/modules/customprefix.md
-          2/modules/customtitle.md: 3/modules/customtitle.md
-          2/modules/cycle.md: 3/modules/cycle.md
+          2/modules/conn_join.md: 3/modules/conn_join.yml
+          2/modules/conn_umodes.md: 3/modules/conn_umodes.yml
+          2/modules/conn_waitpong.md: 3/modules/conn_waitpong.yml
+          2/modules/connectban.md: 3/modules/connectban.yml
+          2/modules/connflood.md: 3/modules/connflood.yml
+          2/modules/customprefix.md: 3/modules/customprefix.yml
+          2/modules/customtitle.md: 3/modules/customtitle.yml
+          2/modules/cycle.md: 3/modules/cycle.yml
           2/modules/dccallow.md: 3/modules/dccallow.md
           2/modules/deaf.md: 3/modules/deaf.md
           2/modules/delayjoin.md: 3/modules/delayjoin.md
