--- a/docs/3/modules/ssl_gnutls.yml
+++ b/docs/3/modules/ssl_gnutls.yml
@@ -119,7 +119,7 @@ configuration:
     default: 'No'
     description: |-
       Whether to require that all tokens in the GnuTLS priority string are valid.
-  details: |+
+  details: |-
     The hash field should be set to one of the values shown in `gnutls-cli --list | grep ^Digests:`.
 
   example: |-
