--- a/docs/3/modules/cloaking.yml
+++ b/docs/3/modules/cloaking.yml
@@ -42,7 +42,7 @@ configuration:
     default: 'No'
     description: |-
       [**New in v3.4.0!**](/3/change-log/#inspircd-340) Whether to to ignore the case of a FQDN when cloaking.
-  details: |+
+  details: |-
     The mode field should be set to one of the following values:
 
     Value       | Description
