--- a/docs/3/modules/dccallow.yml
+++ b/docs/3/modules/dccallow.yml
@@ -18,7 +18,7 @@ configuration:
     default: None
     description: |-
       A glob pattern for the filename.
-  details: |+
+  details: |-
     The action field should be set to one of the following values:
 
     Value | Description
@@ -70,7 +70,7 @@ configuration:
     default: '20'
     description: |-
       The maximum number of entries that a user can have on their DCC whitelist.
-  details: |+
+  details: |-
     See the `<banfile>` documentation above for a list of possible values for the action field.
 
   example: |-
