--- a/docs/3/modules/argon2.yml
+++ b/docs/3/modules/argon2.yml
@@ -3,10 +3,8 @@ name: argon2
 introduction: |-
   !!! note "New in v3.8.0!"
       If you are using an older version you will need to upgrade to use this module.
-  !!! note ""
-      This module depends on a third-party library ([Argon2](https://github.com/P-H-C/phc-winner-argon2)) and must be manually enabled at compile time.
-      Once you have installed the dependency you can enable this module using the following command:
-      <pre><code>./configure --enable-extras argon2</code></pre>
+depends_on:
+  what: a third-party library ([Argon2](https://github.com/P-H-C/phc-winner-argon2))
 
 description: |-
   This module allows other modules to generate [Argon2](https://en.wikipedia.org/wiki/Argon2) hashes.
