--- a/docs/3/modules/regex_pcre.yml
+++ b/docs/3/modules/regex_pcre.yml
@@ -1,10 +1,9 @@
 name: regex_pcre
 
-introduction: |-
-  !!! note ""
-      This module depends on a third-party library ([PCRE](https://www.pcre.org)) and must be manually enabled at compile time.
-      Once you have installed the dependency you can enable this module using the following command:
-      <pre><code>./configure --enable-extras regex_pcre</code></pre>
+introduction: ""
+
+depends_on:
+  what: a third-party library ([PCRE](https://www.pcre.org))
 
 description: |-
   This module provides the `pcre` regular expression engine which uses the [PCRE](https://www.pcre.org) library.
