--- a/docs/3/modules/regex_posix.yml
+++ b/docs/3/modules/regex_posix.yml
@@ -1,10 +1,10 @@
 name: regex_posix
 
-introduction: |-
-  !!! note ""
-      This module depends on a UNIX-specific system library and must be manually enabled at compile time.
-      If you are running on a UNIX system you can enable this module using the following command:
-      <pre><code>./configure --enable-extras regex_posix</code></pre>
+introduction: ""
+
+depends_on:
+  what: a UNIX-specific system library
+  condition: If you are running on a UNIX system
 
 description: |-
   This module provides the `posix` regular expression engine which uses the [POSIX.2](https://www.gnu.org/software/libc/manual/html_node/POSIX-Regexp-Compilation.html#POSIX-Regexp-Compilation) regular expression matching system.
