--- a/docs/3/modules/regex_re2.yml
+++ b/docs/3/modules/regex_re2.yml
@@ -1,10 +1,9 @@
 name: regex_re2
 
-introduction: |-
-  !!! note ""
-      This module depends on a third-party library ([RE2](https://github.com/google/re2)) and must be manually enabled at compile time.
-      Once you have installed the dependency you can enable this module using the following command:
-      <pre><code>./configure --enable-extras regex_re2</code></pre>
+introduction: ""
+
+depends_on:
+  what: a third-party library ([RE2](https://github.com/google/re2))
 
 description: |-
   This module provides the `re2` regular expression engine which uses the [RE2](https://github.com/google/re2) library.
