--- a/docs/3/modules/sqlite3.yml
+++ b/docs/3/modules/sqlite3.yml
@@ -1,10 +1,9 @@
 name: sqlite3
 
-introduction: |-
-  !!! note ""
-      This module depends on a third-party library ([SQLite](https://www.sqlite.org/index.html)) and must be manually enabled at compile time.
-      Once you have installed the dependency you can enable this module using the following command:
-      <pre><code>./configure --enable-extras sqlite3</code></pre>"
+introduction: ""
+
+depends_on:
+  what: a third-party library ([SQLite](https://www.sqlite.org/index.html))
 
 description: |-
   This module provides the ability for SQL modules to query a SQLite 3 database.
