--- a/docs/3/modules/sslrehashsignal.yml
+++ b/docs/3/modules/sslrehashsignal.yml
@@ -1,10 +1,10 @@
 name: sslrehashsignal
 
-introduction: |-
-  !!! note
-      This module depends on UNIX-specific features and must be manually enabled at compile time.
-      If you are building on a UNIX platform you can enable this module using the following command:
-      <pre><code>./configure --enable-extras sslrehashsignal</code></pre>
+introduction: ""
+
+depends_on:
+  what: UNIX-specific features
+  condition: If you are building on a UNIX platform
 
 description: |-
   This module allows the `SIGUSR1` signal to be sent to the server to reload TLS (SSL) certificates.
