Remove strict handling of undefined variables in template
It was needlessly complexifying the syntax we use in the template.

--- a/docs/3/modules/delayjoin.yml
+++ b/docs/3/modules/delayjoin.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds channel mode `D` (delayjoin) which hides JOIN messages from users until they speak.
 
 chmodes:
-  description: null
+  description: ""
   chars:
   - name: delayjoin
     char: D
