--- a/docs/3/modules/hideoper.yml
+++ b/docs/3/modules/hideoper.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds user mode `H` (hideoper) which hides the server operator status of a user from unprivileged users.
 
 umodes:
-  description: null
+  description: ""
   chars:
   - name: hideoper
     char: H
