--- a/docs/3/modules/kicknorejoin.yml
+++ b/docs/3/modules/kicknorejoin.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds channel mode `J` (kicknorejoin) which prevents users from rejoining after being kicked from a channel.
 
 chmodes:
-  description: null
+  description: ""
   chars:
   - name: kicknorejoin
     char: J
