--- a/docs/3/modules/namedmodes.yml
+++ b/docs/3/modules/namedmodes.yml
@@ -4,7 +4,7 @@ description: |-
   This module provides support for adding and removing modes via their long names.
 
 chmodes:
-  description: null
+  description: ""
   chars:
   - name: namebase
     char: Z
