--- a/docs/3/modules/servprotect.yml
+++ b/docs/3/modules/servprotect.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds user mode `k` (servprotect) which protects services pseudoclients from being kicked, being killed, or having their channel prefix modes changed.
 
 umodes:
-  description: null
+  description: ""
   chars:
   - name: servprotect
     char: k
