--- a/docs/3/modules/channelban.yml
+++ b/docs/3/modules/channelban.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds extended ban `j:` which checks whether users are in a channel matching the specified glob pattern.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: j
     type: Matching
