--- a/docs/3/modules/classban.yml
+++ b/docs/3/modules/classban.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds extended ban `n:` which check whether users are in a connect class matching the specified glob pattern.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: n
     type: Matching
