--- a/docs/3/modules/exemptchanops.yml
+++ b/docs/3/modules/exemptchanops.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds channel mode `X` (exemptchanops) which allows channel operators to grant exemptions to various channel-level restrictions.
 
 chmodes:
-  description: null
+  description: ""
   chars:
   - name: exemptchanops
     char: X
