--- a/docs/3/modules/geoban.yml
+++ b/docs/3/modules/geoban.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds extended ban `G:` which matches against two letter country codes.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: G
     type: Matching
