--- a/docs/3/modules/noctcp.yml
+++ b/docs/3/modules/noctcp.yml
@@ -41,7 +41,7 @@ configuration:
     ```
 
 chmodes:
-  description: null
+  description: ""
   chars:
   - name: noctcp
     char: C
@@ -53,7 +53,7 @@ chmodes:
   example: ""
 
 umodes:
-  description: null
+  description: ""
   chars:
   - name: u_noctcp
     char: T
@@ -69,7 +69,7 @@ exemptions:
   description: Allows exempted users to send messages that contain CTCPs.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: C
     type: Acting
