--- a/docs/3/modules/nopartmsg.yml
+++ b/docs/3/modules/nopartmsg.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds extended ban `p:` which blocks the part message of matching users.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: p
     type: Acting
