--- a/docs/3/modules/serverban.yml
+++ b/docs/3/modules/serverban.yml
@@ -4,7 +4,7 @@ description: |-
   This module adds extended ban `s:` which check whether users are on a server matching the specified glob pattern.
 
 extbans:
-  description: null
+  description: ""
   chars:
   - char: s
     type: Matching
