Render markdown in tables
Using this extension: https://python-markdown.github.io/extensions/md_in_html/

Unfortunately, it means we can't indent HTML or it will be detected as
code blocks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ markdown_extensions:
     - extra
     - markdown_include.include:
           base_path: docs
+    - md_in_html
 plugins:
   - exclude:
       glob:
