--- a/docs/3/modules/callerid.yml
+++ b/docs/3/modules/callerid.yml
@@ -23,7 +23,7 @@ configuration:
   - name: tracknick
     type: Boolean
     required: false
-    default: No
+    default: 'No'
     description: |-
       Whether to track nickname changes for users on a callerid whitelist.
   details: ""
