--- a/docs/3/modules/channames.yml
+++ b/docs/3/modules/channames.yml
@@ -9,13 +9,13 @@ configuration:
     The `<channames>` tag defines settings about how the channames module should behave. This tag can only be defined once.
   attributes:
   - name: allowrange
-    type: No. Range
+    type: 'No. Range'
     required: false
     default: None
     description: |-
       The character ranges to allow in a channel name. This overrides denyrange if they overlap.
   - name: denyrange
-    type: No. Range
+    type: 'No. Range'
     required: false
     default: None
     description: |-
