--- a/docs/3/modules/clones.yml
+++ b/docs/3/modules/clones.yml
@@ -2,7 +2,7 @@ name: clones
 
 introduction: |-
   !!! warning ""
-      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd."
+      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
 
 description: |-
   This module adds the `/CLONES` command which allows server operators to view IP addresses from which there are more than a specified number of connections.
