--- a/docs/3/modules/messageflood.yml
+++ b/docs/3/modules/messageflood.yml
@@ -34,6 +34,21 @@ configuration:
                   tagmsg="0.2">
     ```
 
+chmodes:
+  chars:
+  - name: flood
+    char: f
+    type: Parameter
+    syntax: '`(*)<lines>:<seconds>`'
+    usable_by: Channel operators
+    description: Kicks users who send more than &lt;lines&gt; messages in the last &lt;seconds&gt; seconds. If prefixed with * then offending users are also banned.
+  example: |-
+    Prevents more than four messages in the last two seconds:
+
+    ```plaintext
+    /MODE #channel +f 4:2
+    ```
+
 exemptions:
 - name: flood
   description: Allows exempted users to send messages at a higher rate than channel
