--- a/docs/3/modules/blockcaps.yml
+++ b/docs/3/modules/blockcaps.yml
@@ -3,7 +3,8 @@ name: blockcaps
 introduction: |-
   !!! warning ""
       This module has been deprecated and will be removed in the next major version of InspIRCd.
-      You should use [the anticaps module](/3/modules/anticaps) instead."
+
+      You should use [the anticaps module](/3/modules/anticaps) instead.
 
 description: |-
   This module adds channel mode `B` (blockcaps) which allows channels to block messages which are excessively capitalised.
