--- a/docs/3/modules/chancreate.yml
+++ b/docs/3/modules/chancreate.yml
@@ -3,7 +3,7 @@ name: chancreate
 description: |-
   This module sends a notice to snomasks `j` (local) and `J` (remote) when a channel is created.
 
-snotice_masks:
+snomasks:
 - char: j
   description: Notifications about channels being created on the local server.
 - char: J
