--- a/docs/3/modules/codepage.yml
+++ b/docs/3/modules/codepage.yml
@@ -17,7 +17,7 @@ configuration:
     required: true
     default: None
     description: |-
-      *Required!* The name of the codepage; sent to users in the `005` (RPL_ISUPPORT) numeric.
+      The name of the codepage; sent to users in the `005` (RPL_ISUPPORT) numeric.
   details: ""
   example: |-
     ```xml
@@ -39,17 +39,42 @@ configuration:
     default: None
     description: |-
       The upper case equivalent of the character in the `lower` field.
-  details: "Marks \"\xC0\" as the upper case equivalent of \"\xE0\" in the ISO 8859-1\
-    \ codepage.\n\n```xml\n<cpcase lower=\"192\"\n        upper=\"224\">\n```\n\n\
-    #### `<cpchars>`\n\nThe `<cpchars>` tag defines a single character or inclusive\
-    \ range of characters that are allowed in nicknames. This tag can be defined as\
-    \ many times as required.\n\nName  | Type    | Default Value | Description\n-----\
-    \ | ------- | ------------- | -----------\nbegin | Number  | *None*        | The\
-    \ start of an inclusive range of characters to allow in nicknames.\nend   | Number\
-    \  | *None*        | The end of an inclusive range of characters to allow in nicknames.\n\
-    front | Boolean | No            | Whether the characters specified in this tag\
-    \ can exist at the start of a nickname.\nindex | Number  | *None*        | A character\
-    \ to allow in nicknames.\n\n"
+  example: |-
+    Marks "À" as the upper case equivalent of "à" in the ISO 8859-1 codepage.
+
+    ```xml
+    <cpcase lower="192"
+            upper="224">
+    ```
+- name: <cpchars>
+  description: |-
+    The `<cpchars>` tag defines a single character or inclusive range of characters that are allowed in nicknames.
+    This tag can be defined as many times as required.
+  attributes:
+  - name: begin
+    type: Number
+    required: false
+    default: None
+    description: |-
+      The start of an inclusive range of characters to allow in nicknames.
+  - name: end
+    type: Number
+    required: false
+    default: None
+    description: |-
+      The end of an inclusive range of characters to allow in nicknames.
+  - name: front
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      Whether the characters specified in this tag can exist at the start of a nickname.
+  - name: index
+    type: Number
+    required: false
+    default: None
+    description: |-
+      A character to allow in nicknames.
   example: |-
     Allows the character with the numeric code point 45 in a nickname except as the first character.
 
