--- a/docs/3/modules/flashpolicyd.yml
+++ b/docs/3/modules/flashpolicyd.yml
@@ -3,7 +3,8 @@ name: flashpolicyd
 introduction: |-
   !!! warning ""
       This module has been removed in the next major version of InspIRCd.
-      Adobe Flash has been EOL since the end of 2020 and\ is not supported by modern browsers so you no longer need to provide support for it on your network.
+
+      Adobe Flash has been EOL since the end of 2020 and is not supported by modern browsers so you no longer need to provide support for it on your network.
 
 description: |-
   This module allows connection policies to be served to IRC clients that use Adobe Flash.
