--- a/docs/3/modules/modenotice.yml
+++ b/docs/3/modules/modenotice.yml
@@ -2,7 +2,7 @@ name: modenotice
 
 introduction: |-
   !!! warning ""
-      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd."
+      This module has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
 
 description: |-
   This module adds the `/MODENOTICE` command which sends a message to all users with the specified user modes set. If multiple user modes are specified, the notice is only sent to users who have all of them set.
