--- a/docs/3/modules/regex_stdlib.yml
+++ b/docs/3/modules/regex_stdlib.yml
@@ -3,7 +3,7 @@ name: regex_stdlib
 introduction: ""
 
 depends_on:
-  what: C++11-specific features and must be manually enabled at compile time.
+  what: C++11-specific features
   condition: If you are building with a C++11-compatible compiler
 
 description: |-
