--- a/docs/3/modules/spanningtree.yml
+++ b/docs/3/modules/spanningtree.yml
@@ -287,7 +287,7 @@ commands:
   param_count: 2
   syntax: '`<server-mask> [<reason>]`'
   description: |-
-    Attempts to disconnect &lt;server-mask&gt; from the local server with &lt;reason&gt;.=
+    Attempts to disconnect &lt;server-mask&gt; from the local server with &lt;reason&gt;.
 
 example_commands: |-
   Connects the local server to hub.example.com:
