--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,5 +1,5 @@
 name: Pull request checks
-on:
+"on":
   - pull_request
   - push
 jobs:
@@ -20,3 +20,5 @@ jobs:
         run: ./tools/find-orphans
       - name: Check for trailing whitespace
         run: ./tools/find-whitespace
+      - name: Lint YAML
+        run: yamllint .
