cap: Remove hard-wrap

--- a/docs/3/modules/cap.yml
+++ b/docs/3/modules/cap.yml
@@ -22,6 +22,4 @@ client_caps:
     Informs the server that the requesting client is capable of handling arbitrary [standard replies](https://ircv3.net/specs/extensions/standard-replies).
 
 special_notes: |-
-  The `/CAP` command should generally not be executed by users. It is
-  intended to be an entirely internal feature which is executed automatically by clients.
-  Adding and removing capabilities manually may break your client.
+  The `/CAP` command should generally not be executed by users. It is intended to be an entirely internal feature which is executed automatically by clients. Adding and removing capabilities manually may break your client.
