--- a/docs/3/modules/operlevels.yml
+++ b/docs/3/modules/operlevels.yml
@@ -4,8 +4,7 @@ description: |-
   This module allows the server administrator to define ranks for server operators which prevent lower ranked server operators from using `/KILL` on higher ranked server operators.
 
 configuration:
-- name: "<oper>` &amp; `<type>"
-  # FIXME ^ we need to do something about this hack
+- name: [<oper>, <type>]
   description: |-
     This module extends the core `<oper>` and `<type>` tags with the following fields:
   attributes:
