--- a/docs/3/modules/opermodes.yml
+++ b/docs/3/modules/opermodes.yml
@@ -4,8 +4,7 @@ description: |-
   This module allows the server administrator to set user modes on server operators when they log into their server operator account.
 
 configuration:
-- name: "<oper>` &amp; `<type>"
-  # FIXME ^ we need to do something about this hack
+- name: [<oper>, <type>]
   description: |-
     This module extends the core `<oper>` and `<type>` tags with the following fields:
   attributes:
