--- a/docs/3/modules/opermotd.yml
+++ b/docs/3/modules/opermotd.yml
@@ -4,8 +4,7 @@ description: |-
   This module adds the `/OPERMOTD` command which adds a special message of the day for server operators.
 
 configuration:
-- name: "<files>` &amp; `<execfiles>"
-  # FIXME ^ we need to do something about this hack
+- name: [<files>, <execfiles>]
   description: |-
     This module extends the core `<files>` and `<execfiles>` tags with the following fields:
   attributes:
