--- a/docs/3/modules/randquote.yml
+++ b/docs/3/modules/randquote.yml
@@ -4,8 +4,7 @@ description: |-
   This module allows random quotes to be sent to users when they connect to the server.
 
 configuration:
-- name: "<files>` &amp; `<execfiles>"
-  # FIXME ^ we need to do something about this hack
+- name: [<files>, <execfiles>]
   description: |-
     This module extends the core `<files>` and `<execfiles>` tags with the following fields:
   attributes:
