--- a/docs/3/modules/swhois.yml
+++ b/docs/3/modules/swhois.yml
@@ -4,8 +4,7 @@ description: |-
   This module adds the `/SWHOIS` command which adds custom lines to a user's WHOIS response.
 
 configuration:
-- name: "<oper>` &amp; `<type>"
-  # FIXME ^ we need to do something about this hack
+- name: [<oper>, <type>]
   description: |-
     This module extends the core `<oper>` and `<type>` tags with the following fields:
   attributes:
